# redos-analyzer

./: .gitignore  LICENSE  README.md  final_report.txt  generate_fixes.py  pyproject.toml  redos_fixes.csv  redos_report.csv  scan_pypi.py  scan_summary.txt  test_patterns.py
redos-analyzer/: README.md
redos-analyzer/src/redos_analyzer.egg-info/: PKG-INFO  SOURCES.txt
src/redos_analyzer/: __init__.py  _cli.py
tests/: test_patterns.py
