[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redos-analyzer"
version = "1.0.0"
description = "Static analysis tool that detects and automatically fixes ReDoS vulnerabilities in Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "HarshithReddy01" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]
keywords = ["redos", "regex", "security", "static-analysis", "denial-of-service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/HarshithReddy01/redos-analyzer"
Repository = "https://github.com/HarshithReddy01/redos-analyzer"
"Bug Tracker" = "https://github.com/HarshithReddy01/redos-analyzer/issues"

[project.scripts]
redos-scan = "redos_analyzer._cli:main"

[tool.setuptools.packages.find]
where = ["src"]
